MPL-75: Implement schema filter on team ownership